After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 642603 - Double-clicking a date in the clock applet launches evolution with wrong date
Double-clicking a date in the clock applet launches evolution with wrong date
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: clock
git master
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-02-17 18:31 UTC by Magnus E
Modified: 2011-02-19 16:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Removing the time handling of the command line might solve the problem. (1.67 KB, patch)
2011-02-17 18:31 UTC, Magnus E
committed Details | Review

Description Magnus E 2011-02-17 18:31:40 UTC
Created attachment 181158 [details] [review]
Removing the time handling of the command line might solve the problem.

The date selected in the clock applet is converted to UTC which will make the date change if you are in a time zone east of London (since the time is 00h00).

The problem is present in at least Ubuntu 10.10 and Fedora Core 13.

It seems like evolution does not need the time at all as an command line argument. Maybe the best way to fix this is to skip the time part and only include the date?

Attaching a patch that, hopefully, does this.

Can someone verify that it solves the problem?
(I'm very new to this...)
Comment 1 André Klapper 2011-02-19 14:20:54 UTC
/me pings vuntz (seen people complaining about this too often)
Comment 2 Vincent Untz 2011-02-19 16:01:02 UTC
Comment on attachment 181158 [details] [review]
Removing the time handling of the command line might solve the problem.

Thanks!