From b130f26195efba8a1c3f8bd40f34ed45563635b7 Mon Sep 17 00:00:00 2001 From: Magnus E <koma@lysator.liu.se> Date: Sat, 19 Feb 2011 16:00:44 +0000 Subject: clock: Open evolution with right date when clicking on calendar

https://bugzilla.gnome.org/show_bug.cgi?id=642603